2009-04-19  Stefan Jahn  <stefan@lkcc.org>

	* pad2bit.cpp (vhdlCode, verilogCode): Reformulation of C code
	into VHDL and Verilog.  Thus, both immediate as well as subcircuit
	parameters, can be interpreted.

2009-04-18  Stefan Jahn  <stefan@lkcc.org>

	* logical_buf.cpp (vhdlCode, verilogCode): Using new
	Verilog_Delay() and VHDL_Delay() functions producing delay time
	identifiers.

2009-04-17  Stefan Jahn  <stefan@lkcc.org>

	* subcircuit.cpp (verilogCode): Passing subcircuit parameters to
	Verilog-HDL subcircuits.

2009-04-13  Stefan Jahn  <stefan@lkcc.org>

	* component.cpp (paint): Made simulation boxes and component texts
	somewhat aware of the right-to-left translations like Arabic and
	Hebrew.

2009-04-09  Stefan Jahn  <stefan@lkcc.org>

	* component.cpp (load): Start backward compatibility code when
	loading diodes for one less property.  Necessary to allow
	converted diodes from qucsconv (-of qucslib) to be correctly
	inserted into schematic.

2009-04-08  Stefan Jahn  <stefan@lkcc.org>

	* vhdlfile.cpp (parseGenerics): Parsing additionally the generic
	map and make it available as properties.

2009-04-07  Stefan Jahn  <stefan@lkcc.org>

	* component.cpp: Added transfer function scaling factor property
	to digital models.

	* subcircuit.cpp (vhdlCode): Added subcircuit parameters in VHDL
	using the generic map() feature.

	* phototransistor.cpp (createSymbol): Fixed symbol painting.

2009-04-01  Stefan Jahn  <stefan@lkcc.org>

	* rlcg.cpp (RLCG): Added new transmission line defined by RLCG
	loads.

2009-03-29  Stefan Jahn  <stefan@lkcc.org>

	* relais.cpp (Relais): Added marks to visualize input voltage
	polarity.

	* phototransistor.cpp (phototransistor): Added new phototransistor
	model.  Thanks to Mike!

2009-03-18  Stefan Jahn  <stefan@lkcc.org>

	* component.cpp (load): Fixed bug in loading RFEDD with more than
	4 parameters specified.

2009-03-15  Stefan Jahn  <stefan@lkcc.org>

	* msrstub.cpp (MSrstub): New component: microstrip radial stub.
